# sei-project4-backend

./: README.md  README2.md  pyproject.toml
backend/: permissions.py  settings.py  urls.py
blog_categories/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
blog_categories/migrations/: 0001_initial.py
blog_comments/: admin.py  apps.py  models.py  seeds.json  serializers.py  urls.py  views.py
blog_comments/migrations/: 0001_initial.py  0002_comment_active.py
blog_posts/: admin.py  models.py  seeds.json  serializers.py  urls.py  views.py
blog_posts/migrations/: 0001_initial.py  0002_remove_blogpost_article_author_and_more.py  0003_alter_blogpost_slug.py  0004_blogpost_category.py  0005_alter_blogpost_category.py  0006_rename_category_blogpost_categories.py  0007_remove_blogpost_slug.py  0008_rename_author_name_blogpost_author.py  0009_alter_blogpost_image.py  0010_alter_blogpost_author_alter_blogpost_image.py  0011_alter_blogpost_author.py  0012_alter_blogpost_image.py  0013_alter_blogpost_image.py  0014_alter_blogpost_image.py  0015_alter_blogpost_image.py  0016_alter_blogpost_image.py
users/: admin.py  models.py  seeds.json  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_is_author_communityuser_is_staff_writer.py
