[tool.poetry]
name = "sei-project4-the-community-project-backend"
version = "0.1.0"
description = ""
authors = ["Rachel Tipton <RACHELMTIPTON@GMAIL.COM>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.950"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
